syntax = "proto3";

package market_data;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/market-data;market_data";

// 市场行情服务。
service MarketDataService {
  // 查询最新价格快照。
  rpc GetLatestQuote(GetLatestQuoteRequest) returns (QuoteResponse);

  // 查询历史 K 线。
  rpc GetKlines(GetKlinesRequest) returns (KlinesResponse);

  // 查询实时订单簿。
  rpc GetOrderBook(GetOrderBookRequest) returns (OrderBookResponse);

  // 流式订阅行情更新。
  rpc SubscribeQuotes(SubscribeQuotesRequest) returns (stream QuoteUpdate);

  // 获取全网成交历史。
  rpc GetTrades(GetTradesRequest) returns (TradesResponse);
}

// 快照请求。
message GetLatestQuoteRequest {
  // 交易对。
  string symbol = 1;
}

// 快照响应。
message QuoteResponse {
  // 交易对。
  string symbol = 1;
  // 买一价。
  double bid_price = 2;
  // 卖一价。
  double ask_price = 3;
  // 买盘量。
  double bid_size = 4;
  // 卖盘量。
  double ask_size = 5;
  // 现价。
  double last_price = 6;
  // 现手量。
  double last_size = 7;
  // 时间戳。
  int64 timestamp = 8;
}

// K 线请求。
message GetKlinesRequest {
  // 交易对。
  string symbol = 1;
  // 周期。
  string interval = 2;
  // 限制条数。
  int32 limit = 3;
}

// K 线单点。
message Kline {
  // 开盘时间。
  int64 open_time = 1;
  // 开盘价。
  double open = 2;
  // 最高价。
  double high = 3;
  // 最低价。
  double low = 4;
  // 收盘价。
  double close = 5;
  // 成交量。
  double volume = 6;
  // 收盘时间。
  int64 close_time = 7;
}

// K 线响应。
message KlinesResponse {
  // 交易对。
  string symbol = 1;
  // 周期。
  string interval = 2;
  // 数据序列。
  repeated Kline klines = 3;
}

// 订单簿请求。
message GetOrderBookRequest {
  // 交易对。
  string symbol = 1;
  // 档位深度。
  int32 depth = 2;
}

// 订单簿档位。
message OrderBookLevel {
  // 价格。
  double price = 1;
  // 数量。
  double quantity = 2;
}

// 订单簿响应。
message OrderBookResponse {
  // 交易对。
  string symbol = 1;
  // 买盘。
  repeated OrderBookLevel bids = 2;
  // 卖盘。
  repeated OrderBookLevel asks = 3;
  // 时间戳。
  int64 timestamp = 4;
}

// 订阅请求。
message SubscribeQuotesRequest {
  // 目标代码列表。
  repeated string symbols = 1;
}

// 实时推送。
message QuoteUpdate {
  // 交易对。
  string symbol = 1;
  // 买一价。
  double bid_price = 2;
  // 卖一价。
  double ask_price = 3;
  // 买盘量。
  double bid_size = 4;
  // 卖盘量。
  double ask_size = 5;
  // 现价。
  double last_price = 6;
  // 现手。
  double last_size = 7;
  // 时间戳。
  int64 timestamp = 8;
}

// 成交请求。
message GetTradesRequest {
  // 交易对。
  string symbol = 1;
  // 记录数。
  int32 limit = 2;
}

// 公变成交记录。
message TradeRecord {
  // 成交 ID。
  string trade_id = 1;
  // 交易对。
  string symbol = 2;
  // 价格。
  double price = 3;
  // 数量。
  double quantity = 4;
  // 方向。
  string side = 5;
  // 时间。
  int64 timestamp = 6;
}

// 成交响应。
message TradesResponse {
  // 交易对。
  string symbol = 1;
  // 记录序列。
  repeated TradeRecord trades = 2;
}
